--- a/tests/prop/moshup.ipynb
+++ b/tests/prop/moshup.ipynb
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,8 @@
     "axs.set_xlabel(\"x [AU]\")\n",
     "axs.set_ylabel(\"y [AU]\")\n",
     "axs.set_aspect('equal')\n",
-    "plt.show()"
+    "plt.show(block=False)\n",
+    "plt.close()"
    ]
   },
   {
