--- a/tests/fit/farnocchia.ipynb
+++ b/tests/fit/farnocchia.ipynb
@@ -158,7 +158,7 @@
     }
    ],
    "source": [
-    "fit_sim.plot_summary()"
+    "fit_sim.plot_summary(auto_close=True)"
    ]
   },
   {
@@ -188,7 +188,7 @@
     }
    ],
    "source": [
-    "fit_sim.iters[-1].plot_iteration_summary(title='Postfit Residuals')"
+    "fit_sim.iters[-1].plot_iteration_summary(title='Postfit Residuals', auto_close=True)"
    ]
   }
  ],
