--- a/tests/fit/shantanunaidu.ipynb
+++ b/tests/fit/shantanunaidu.ipynb
@@ -164,7 +164,7 @@
     }
    ],
    "source": [
-    "fit_sim.plot_summary()"
+    "fit_sim.plot_summary(auto_close=True)"
    ]
   },
   {
@@ -194,7 +194,7 @@
     }
    ],
    "source": [
-    "fit_sim.iters[-1].plot_iteration_summary(title='Postfit Residuals')"
+    "fit_sim.iters[-1].plot_iteration_summary(title='Postfit Residuals', auto_close=True)"
    ]
   }
  ],
