--- a/tests/prop/icarus.ipynb
+++ b/tests/prop/icarus.ipynb
@@ -140,7 +140,8 @@
     "axs.set_xlabel(\"x [AU]\")\n",
     "axs.set_ylabel(\"y [AU]\")\n",
     "axs.set_aspect('equal')\n",
-    "plt.show()"
+    "plt.show(block=False)\n",
+    "plt.close()"
    ]
   },
   {
