--- a/tests/python/prop/didymos.ipynb
+++ b/tests/python/prop/didymos.ipynb
@@ -100,7 +100,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "didymos = prop.IntegBody(de_kernel_path, \"(65803) Didymos\", t0, 0.0, 0.0, cometary_elements, init_cov, ng_params, prop_sim.consts)\n",
+    "didymos = prop.IntegBody(\"(65803) Didymos\", t0, 0.0, 0.0, cometary_elements, init_cov, ng_params)\n",
     "prop_sim.add_integ_body(didymos)"
    ]
   },
