--- a/_sources/tests/python/prop/apophis.ipynb
+++ b/_sources/tests/python/prop/apophis.ipynb
@@ -100,7 +100,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "apophis = prop.IntegBody(de_kernel_path, \"(99942) Apophis\", t0, 0.0, 0.0, cometary_elements, init_cov, ng_params, prop_sim.consts)\n",
+    "apophis = prop.IntegBody(\"(99942) Apophis\", t0, 0.0, 0.0, cometary_elements, init_cov, ng_params)\n",
     "prop_sim.add_integ_body(apophis)"
    ]
   },
