joss paper update

--- a/joss/joss_paper.bib
+++ b/joss/joss_paper.bib
@@ -1,3 +1,11 @@
+@article{Makadia2023,
+journal={Planetary Science Journal},
+year=2023,
+author={Rahil Makadia and Steven R. Chesley and Davide Farnocchia and Shantanu P. Naidu and Damya Souami and Paolo Tanga and Kleomenis Tsiganis and Masatoshi Hirabayashi and Siegfried Eggl},
+title={Estimation of the Heliocentric Momentum Enhancement from a Kinetic Impact: The Double Asteroid Redirection Test (DART) Mission},
+volume={In Review},
+}
+
 @article{Rein2014,
 author = {Rein, Hanno and Spiegel, David S.},
 title = "{ias15: a fast, adaptive, high-order integrator for gravitational dynamics, accurate to machine precision over a billion orbits}",
