--- a/tests/python/prop/apophis.ipynb
+++ b/tests/python/prop/apophis.ipynb
@@ -139,7 +139,7 @@
     "jpl = np.array([0.017575542120147558, 1.2196672850476662, 0.4783965165437007, -0.013539283384755667, 0.0005355366349979586, -1.5069904336052799e-05])\n",
     "grss = np.array(prop_sim.xInteg)\n",
     "pos_diff = np.linalg.norm((jpl-grss)[:3])*prop_sim.consts.du2m\n",
-    "# assert pos_diff < 100.0"
+    "assert pos_diff < 1.0e4"
    ]
   },
   {
