added gaia fpr handling; minor edits to test compiling

--- a/joss/joss_paper.bib
+++ b/joss/joss_paper.bib
@@ -80,3 +80,17 @@ author = {Matthew J. Holman and Arya Akmal and Davide Farnocchia and Hanno Rein 
 title = {ASSIST: An Ephemeris-quality Test-particle Integrator},
 journal = {The Planetary Science Journal},
 }
+
+@article{Ivezic2019,
+doi = {10.3847/1538-4357/ab042c},
+url = {https://dx.doi.org/10.3847/1538-4357/ab042c},
+year = {2019},
+month = {mar},
+publisher = {The American Astronomical Society},
+volume = {873},
+number = {2},
+pages = {111},
+author = {Željko Ivezić and Steven M. Kahn and J. Anthony Tyson and Bob Abel and Emily Acosta and Robyn Allsman and David Alonso and Yusra AlSayyad and Scott F. Anderson and John Andrew and James Roger P. Angel and George Z. Angeli and Reza Ansari and Pierre Antilogus and Constanza Araujo and Robert Armstrong and Kirk T. Arndt and Pierre Astier and Éric Aubourg and Nicole Auza and Tim S. Axelrod and Deborah J. Bard and Jeff D. Barr and Aurelian Barrau and James G. Bartlett and Amanda E. Bauer and Brian J. Bauman and Sylvain Baumont and Ellen Bechtol and Keith Bechtol and Andrew C. Becker and Jacek Becla and Cristina Beldica and Steve Bellavia and Federica B. Bianco and Rahul Biswas and Guillaume Blanc and Jonathan Blazek and Roger D. Blandford and Josh S. Bloom and Joanne Bogart and Tim W. Bond and Michael T. Booth and Anders W. Borgland and Kirk Borne and James F. Bosch and Dominique Boutigny and Craig A. Brackett and Andrew Bradshaw and William Nielsen Brandt and Michael E. Brown and James S. Bullock and Patricia Burchat and David L. Burke and Gianpietro Cagnoli and Daniel Calabrese and Shawn Callahan and Alice L. Callen and Jeffrey L. Carlin and Erin L. Carlson and Srinivasan Chandrasekharan and Glenaver Charles-Emerson and Steve Chesley and Elliott C. Cheu and Hsin-Fang Chiang and James Chiang and Carol Chirino and Derek Chow and David R. Ciardi and Charles F. Claver and Johann Cohen-Tanugi and Joseph J. Cockrum and Rebecca Coles and Andrew J. Connolly and Kem H. Cook and Asantha Cooray and Kevin R. Covey and Chris Cribbs and Wei Cui and Roc Cutri and Philip N. Daly and Scott F. Daniel and Felipe Daruich and Guillaume Daubard and Greg Daues and William Dawson and Francisco Delgado and Alfred Dellapenna and Robert de Peyster and Miguel de Val-Borro and Seth W. Digel and Peter Doherty and Richard Dubois and Gregory P. Dubois-Felsmann and Josef Durech and Frossie Economou and Tim Eifler and Michael Eracleous and Benjamin L. Emmons and Angelo Fausti Neto and Henry Ferguson and Enrique Figueroa and Merlin Fisher-Levine and Warren Focke and Michael D. Foss and James Frank and Michael D. Freemon and Emmanuel Gangler and Eric Gawiser and John C. Geary and Perry Gee and Marla Geha and Charles J. B. Gessner and Robert R. Gibson and D. Kirk Gilmore and Thomas Glanzman and William Glick and Tatiana Goldina and Daniel A. Goldstein and Iain Goodenow and Melissa L. Graham and William J. Gressler and Philippe Gris and Leanne P. Guy and Augustin Guyonnet and Gunther Haller and Ron Harris and Patrick A. Hascall and Justine Haupt and Fabio Hernandez and Sven Herrmann and Edward Hileman and Joshua Hoblitt and John A. Hodgson and Craig Hogan and James D. Howard and Dajun Huang and Michael E. Huffer and Patrick Ingraham and Walter R. Innes and Suzanne H. Jacoby and Bhuvnesh Jain and Fabrice Jammes and M. James Jee and Tim Jenness and Garrett Jernigan and Darko Jevremović and Kenneth Johns and Anthony S. Johnson and Margaret W. G. Johnson and R. Lynne Jones and Claire Juramy-Gilles and Mario Jurić and Jason S. Kalirai and Nitya J. Kallivayalil and Bryce Kalmbach and Jeffrey P. Kantor and Pierre Karst and Mansi M. Kasliwal and Heather Kelly and Richard Kessler and Veronica Kinnison and David Kirkby and Lloyd Knox and Ivan V. Kotov and Victor L. Krabbendam and K. Simon Krughoff and Petr Kubánek and John Kuczewski and Shri Kulkarni and John Ku and Nadine R. Kurita and Craig S. Lage and Ron Lambert and Travis Lange and J. Brian Langton and Laurent Le Guillou and Deborah Levine and Ming Liang and Kian-Tat Lim and Chris J. Lintott and Kevin E. Long and Margaux Lopez and Paul J. Lotz and Robert H. Lupton and Nate B. Lust and Lauren A. MacArthur and Ashish Mahabal and Rachel Mandelbaum and Thomas W. Markiewicz and Darren S. Marsh and Philip J. Marshall and Stuart Marshall and Morgan May and Robert McKercher and Michelle McQueen and Joshua Meyers and Myriam Migliore and Michelle Miller and David J. Mills and Connor Miraval and Joachim Moeyens and Fred E. Moolekamp and David G. Monet and Marc Moniez and Serge Monkewitz and Christopher Montgomery and Christopher B. Morrison and Fritz Mueller and Gary P. Muller and Freddy Muñoz Arancibia and Douglas R. Neill and Scott P. Newbry and Jean-Yves Nief and Andrei Nomerotski and Martin Nordby and Paul O’Connor and John Oliver and Scot S. Olivier and Knut Olsen and William O’Mullane and Sandra Ortiz and Shawn Osier and Russell E. Owen and Reynald Pain and Paul E. Palecek and John K. Parejko and James B. Parsons and Nathan M. Pease and J. Matt Peterson and John R. Peterson and Donald L. Petravick and M. E. Libby Petrick and Cathy E. Petry and Francesco Pierfederici and Stephen Pietrowicz and Rob Pike and Philip A. Pinto and Raymond Plante and Stephen Plate and Joel P. Plutchak and Paul A. Price and Michael Prouza and Veljko Radeka and Jayadev Rajagopal and Andrew P. Rasmussen and Nicolas Regnault and Kevin A. Reil and David J. Reiss and Michael A. Reuter and Stephen T. Ridgway and Vincent J. Riot and Steve Ritz and Sean Robinson and William Roby and Aaron Roodman and Wayne Rosing and Cecille Roucelle and Matthew R. Rumore and Stefano Russo and Abhijit Saha and Benoit Sassolas and Terry L. Schalk and Pim Schellart and Rafe H. Schindler and Samuel Schmidt and Donald P. Schneider and Michael D. Schneider and William Schoening and German Schumacher and Megan E. Schwamb and Jacques Sebag and Brian Selvy and Glenn H. Sembroski and Lynn G. Seppala and Andrew Serio and Eduardo Serrano and Richard A. Shaw and Ian Shipsey and Jonathan Sick and Nicole Silvestri and Colin T. Slater and J. Allyn Smith and R. Chris Smith and Shahram Sobhani and Christine Soldahl and Lisa Storrie-Lombardi and Edward Stover and Michael A. Strauss and Rachel A. Street and Christopher W. Stubbs and Ian S. Sullivan and Donald Sweeney and John D. Swinbank and Alexander Szalay and Peter Takacs and Stephen A. Tether and Jon J. Thaler and John Gregg Thayer and Sandrine Thomas and Adam J. Thornton and Vaikunth Thukral and Jeffrey Tice and David E. Trilling and Max Turri and Richard Van Berg and Daniel Vanden Berk and Kurt Vetter and Francoise Virieux and Tomislav Vucina and William Wahl and Lucianne Walkowicz and Brian Walsh and Christopher W. Walter and Daniel L. Wang and Shin-Yawn Wang and Michael Warner and Oliver Wiecha and Beth Willman and Scott E. Winters and David Wittman and Sidney C. Wolff and W. Michael Wood-Vasey and Xiuqin Wu and Bo Xin and Peter Yoachim and Hu Zhan},
+title = {LSST: From Science Drivers to Reference Design and Anticipated Data Products},
+journal = {The Astrophysical Journal},
+}
