--- a/_sources/tests/python/prop/apophis.ipynb
+++ b/_sources/tests/python/prop/apophis.ipynb
@@ -144,10 +144,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8460.127897532791"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(pos_diff)"
+   ]
   }
  ],
  "metadata": {
