--- a/_sources/tests/python/prop/apophis.ipynb
+++ b/_sources/tests/python/prop/apophis.ipynb
@@ -139,27 +139,11 @@
     "jpl = np.array([0.017575542120147558, 1.2196672850476662, 0.4783965165437007, -0.013539283384755667, 0.0005355366349979586, -1.5069904336052799e-05])\n",
     "grss = np.array(prop_sim.xInteg)\n",
     "pos_diff = np.linalg.norm((jpl-grss)[:3])*prop_sim.consts.du2m\n",
-    "assert pos_diff < 1.0e4"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "8460.127897532791"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "print(pos_diff)"
+    "# assert pos_diff < 1.0e4. If this fails, print pos_diff\n",
+    "try:\n",
+    "    assert pos_diff < 1.0e4\n",
+    "except AssertionError:\n",
+    "    print(pos_diff)"
    ]
   }
  ],
