--- a/tests/python/fit/shantanunaidu.ipynb
+++ b/tests/python/fit/shantanunaidu.ipynb
@@ -53,7 +53,7 @@
      "output_type": "stream",
      "text": [
       "Skipped 0 observations \n",
-      "\t 0 of which were non-geocentric occultations or space-based observations, \n",
+      "\t 0 of which were non-geocentric occultations, \n",
       "\t 0 were either roving or radar observations (radar is handled separately), \n",
       "\t 0 of which were outside the specified time range.\n",
       "No debiasing needed for 623 observations. Debiased 990 observations. No biasing information for 24 observations.\n",
@@ -128,21 +128,21 @@
      "text": [
       "Summary of the orbit fit calculations at iteration 5 (of 5):\n",
       "==============================================================\n",
-      "RMS unweighted: 0.41976342527025184\n",
-      "RMS weighted: 0.5017086258669217\n",
-      "chi-squared: 819.2782607807342\n",
-      "reduced chi-squared: 0.24721733879925595\n",
-      "square root of reduced chi-squared: 0.4972095522003333\n",
+      "RMS unweighted: 0.41976342764107893\n",
+      "RMS weighted: 0.5017086293783858\n",
+      "chi-squared: 819.2782784202678\n",
+      "reduced chi-squared: 0.24721734412198787\n",
+      "square root of reduced chi-squared: 0.4972095575529375\n",
       "--------------------------------------------------------------\n",
       "Solution Time: MJD 57500.00 TDB =  2016-04-22 00:00:00.000 TDB\n",
       "--------------------------------------------------------------\n",
       "Fitted Variable\t\tInitial Value\t\t\tUncertainty\t\t\tFitted Value \t\t\tUncertainty\t\t\tChange\t\t\t\tChange (sigma)\n",
-      "e\t\t\t1.66697868063e-01\t\t6.73767951889e-09 \t\t1.66697862433e-01\t\t6.68520254339e-09 \t\t-5.62998236919e-09\t\t-0.836\n",
-      "q\t\t\t2.56503023084e+00\t\t2.00660624764e-08 \t\t2.56503024804e+00\t\t1.99033626034e-08 \t\t+1.72057355030e-08\t\t+0.857\n",
-      "tp\t\t\t5.75113652724e+04\t\t3.28498193378e-05 \t\t5.75113652764e+04\t\t3.22571395653e-05 \t\t+3.96938412450e-06\t\t+0.121\n",
-      "om\t\t\t2.06376077176e+02\t\t2.70610101692e-05 \t\t2.06376092411e+02\t\t2.69482797806e-05 \t\t+1.52347119524e-05\t\t+0.563\n",
-      "w\t\t\t1.54026406216e+02\t\t2.84582407556e-05 \t\t1.54026391787e+02\t\t2.82518409928e-05 \t\t-1.44299600322e-05\t\t-0.507\n",
-      "i\t\t\t7.88793990680e-01\t\t5.14004162240e-07 \t\t7.88794212899e-01\t\t5.04308974906e-07 \t\t+2.22219171953e-07\t\t+0.432\n"
+      "e\t\t\t1.66697868063e-01\t\t6.73767951889e-09 \t\t1.66697862433e-01\t\t6.68519544825e-09 \t\t-5.62995272624e-09\t\t-0.836\n",
+      "q\t\t\t2.56503023084e+00\t\t2.00660624764e-08 \t\t2.56503024804e+00\t\t1.99033770589e-08 \t\t+1.72056484615e-08\t\t+0.857\n",
+      "tp\t\t\t5.75113652724e+04\t\t3.28498193378e-05 \t\t5.75113652764e+04\t\t3.22571773102e-05 \t\t+3.96950781578e-06\t\t+0.121\n",
+      "om\t\t\t2.06376077176e+02\t\t2.70610101692e-05 \t\t2.06376092411e+02\t\t2.69482657195e-05 \t\t+1.52345725724e-05\t\t+0.563\n",
+      "w\t\t\t1.54026406216e+02\t\t2.84582407556e-05 \t\t1.54026391787e+02\t\t2.82518267981e-05 \t\t-1.44297910651e-05\t\t-0.507\n",
+      "i\t\t\t7.88793990680e-01\t\t5.14004162240e-07 \t\t7.88794212900e-01\t\t5.04308914194e-07 \t\t+2.22219753598e-07\t\t+0.432\n"
      ]
     }
    ],
