--- a/tests/python/prop/didymos.ipynb
+++ b/tests/python/prop/didymos.ipynb
@@ -88,7 +88,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "didymos = prop.IntegBody(\"(65803) Didymos\", t0, 0.0, 0.0, pos, vel, init_cov, ng_params)\n",
+    "didymos = prop.IntegBody(\"(65803) Didymos\", t0, 0.0, 0.0, pos, vel, ng_params)\n",
     "prop_sim.add_integ_body(didymos)"
    ]
   },
