--- a/tests/python/prop/apophis.ipynb
+++ b/tests/python/prop/apophis.ipynb
@@ -87,7 +87,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "apophis = prop.IntegBody(\"(99942) Apophis\", t0, 0.0, 0.0, pos, vel, init_cov, ng_params)\n",
+    "apophis = prop.IntegBody(\"(99942) Apophis\", t0, 0.0, 0.0, pos, vel, ng_params)\n",
     "prop_sim.add_integ_body(apophis)"
    ]
   },
