--- a/tests/python/prop/icarus.ipynb
+++ b/tests/python/prop/icarus.ipynb
@@ -100,7 +100,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "icarus = prop.IntegBody(\"(1566) Icarus\", t0, 0.0, 0.0, cometary_elements, init_cov, ng_params)\n",
+    "icarus = prop.IntegBody(\"(1566) Icarus\", t0, 0.0, 0.0, cometary_elements, ng_params)\n",
     "prop_sim.add_integ_body(icarus)"
    ]
   },
