--- a/tests/python/prop/moshup.ipynb
+++ b/tests/python/prop/moshup.ipynb
@@ -100,7 +100,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "moshup = prop.IntegBody(\"(66391) Moshup\", t0, 0.0, 0.0, cometary_elements, init_cov, ng_params)\n",
+    "moshup = prop.IntegBody(\"(66391) Moshup\", t0, 0.0, 0.0, cometary_elements, ng_params)\n",
     "prop_sim.add_integ_body(moshup)"
    ]
   },
