added new adaptive timestep scheme from REBOUND (PRS24)

--- a/joss/joss_paper.bib
+++ b/joss/joss_paper.bib
@@ -89,7 +89,7 @@ journal = {The Planetary Science Journal},
 }
 
 @article{Schwamb2023,
-author    = {Schwamb, Megan E. and Jones, R. Lynne and Yoachim, Peter and Volk, Kathryn and Dorsey, Rosemary C. and Opitom, Cyrielle and Greenstreet, Sarah and Lister, Tim and Snodgrass, Colin and Bolin, Bryce T. and Inno, Laura and Bannister, Michele T. and Eggl, Siegfried and Solontoi, Michael and Kelley, Michael S. P. and Jurić, Mario and Lin 林, Hsing Wen 省文 and Ragozzine, Darin and Bernardinelli, Pedro H. and Chesley, Steven R. and Daylan, Tansu and Ďurech, Josef and Fraser, Wesley C. and Granvik, Mikael and Knight, Matthew M. and Lisse, Carey M. and Malhotra, Renu and Oldroyd, William J. and Thirouin, Audrey and Ye 叶, Quanzhi 泉志},
+author    = {Schwamb, Megan E. and Jones, R. Lynne and Yoachim, Peter and Volk, Kathryn and Dorsey, Rosemary C. and Opitom, Cyrielle and Greenstreet, Sarah and Lister, Tim and Snodgrass, Colin and Bolin, Bryce T. and Inno, Laura and Bannister, Michele T. and Eggl, Siegfried and Solontoi, Michael and Kelley, Michael S. P. and Jurić, Mario and Lin, Hsing Wen and Ragozzine, Darin and Bernardinelli, Pedro H. and Chesley, Steven R. and Daylan, Tansu and Ďurech, Josef and Fraser, Wesley C. and Granvik, Mikael and Knight, Matthew M. and Lisse, Carey M. and Malhotra, Renu and Oldroyd, William J. and Thirouin, Audrey and Ye, Quanzhi},
 journal   = {The Astrophysical Journal Supplement Series},
 title     = {Tuning the Legacy Survey of Space and Time (LSST) Observing Strategy for Solar System Science},
 year      = {2023},
