rename propSimulation to PropSimulation for consistency and add two-way utc-tai routines

--- a/tests/python/prop/apophis.ipynb
+++ b/tests/python/prop/apophis.ipynb
@@ -60,7 +60,7 @@
     "de_kernel_path = grss.utils.default_kernel_path(de_kernel)\n",
     "t0 = 62138.035998938605\n",
     "tf = 62502.53724260954\n",
-    "prop_sim = prop.propSimulation(\"(99942) Apophis propagation test\", t0, de_kernel, de_kernel_path)"
+    "prop_sim = prop.PropSimulation(\"(99942) Apophis propagation test\", t0, de_kernel, de_kernel_path)"
    ]
   },
   {
@@ -132,18 +132,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "jpl = np.array([0.017575542120147558, 1.2196672850476662, 0.4783965165437007, -0.013539283384755667, 0.0005355366349979586, -1.5069904336052799e-05])\n",
     "grss = np.array(prop_sim.xInteg)\n",
     "pos_diff = np.linalg.norm((jpl-grss)[:3])*prop_sim.consts.du2m\n",
-    "# assert pos_diff < 1.0e4. If this fails, print pos_diff\n",
-    "try:\n",
-    "    assert pos_diff < 1.0e4\n",
-    "except AssertionError:\n",
-    "    print(pos_diff)"
+    "assert pos_diff < 5.0e3, f\"Position difference {pos_diff} m is too large\""
    ]
   },
   {
