--- a/tests/python/prop/didymos.ipynb
+++ b/tests/python/prop/didymos.ipynb
@@ -61,7 +61,7 @@
     "t0 = 59956.5\n",
     "numDays = 3000\n",
     "tf = t0 + numDays\n",
-    "prop_sim = prop.propSimulation(\"(65803) Didymos propagation test\", t0, de_kernel, de_kernel_path)"
+    "prop_sim = prop.PropSimulation(\"(65803) Didymos propagation test\", t0, de_kernel, de_kernel_path)"
    ]
   },
   {
@@ -141,7 +141,7 @@
     "grss = np.array(prop_sim.xInteg) * prop_sim.consts.du2m\n",
     "grss[3:6] /= 86400.0\n",
     "pos_diff = np.linalg.norm((jpl-grss)[:3])\n",
-    "assert pos_diff < 100.0"
+    "assert pos_diff < 100.0, f\"Position difference {pos_diff} m is too large\""
    ]
   },
   {
