--- a/tests/python/prop/icarus.ipynb
+++ b/tests/python/prop/icarus.ipynb
@@ -73,7 +73,7 @@
     "numYears = 10\n",
     "numDays = numYears * daysInYear\n",
     "tf = t0 + numDays\n",
-    "prop_sim = prop.propSimulation(\"(1566) Icarus propagation test\", t0, de_kernel, de_kernel_path)"
+    "prop_sim = prop.PropSimulation(\"(1566) Icarus propagation test\", t0, de_kernel, de_kernel_path)"
    ]
   },
   {
