replaced astroquery API with MPC API; renamed NongravParamaters because I'm a little dumdum who couldn't spell parameters

--- a/tests/python/prop/apophis.ipynb
+++ b/tests/python/prop/apophis.ipynb
@@ -38,7 +38,7 @@
    "source": [
     "pos = [-0.55946538550488512+0.001232781221250307, 0.85647564757574512-0.0012750764430978325, 0.30415066217102493-0.0005187131180711941]\n",
     "vel = [-0.013818324735921638-4.1817715078240506e-07, -0.0060088275597939191+4.81738545944803e-06, -0.0025805044631309632+2.0787456036811378e-06]\n",
-    "ng_params = prop.NongravParamaters()\n",
+    "ng_params = prop.NongravParameters()\n",
     "ng_params.a1 = 4.999999873689E-13\n",
     "ng_params.a2 = -2.901085508711E-14\n",
     "ng_params.a3 = 0.0\n",
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
