--- a/tests/python/prop/didymos.ipynb
+++ b/tests/python/prop/didymos.ipynb
@@ -38,7 +38,7 @@
    "source": [
     "pos = [-4.739057923859238E-01, 1.095212783390737E+00, 5.270678006987460E-01]\n",
     "vel = [-1.653652752454120E-02, -8.564528317342794E-04, 6.471815241318629E-04]\n",
-    "ng_params = prop.NongravParamaters()\n",
+    "ng_params = prop.NongravParameters()\n",
     "ng_params.a1 = 0.0\n",
     "ng_params.a2 = -1.042309691002E-14\n",
     "ng_params.a3 = 0.0\n",
