--- a/tests/python/prop/icarus.ipynb
+++ b/tests/python/prop/icarus.ipynb
@@ -54,7 +54,7 @@
     "i = init_sol['i']*np.pi/180.0\n",
     "\n",
     "cometary_elements = [e, q, tp, om, w, i]\n",
-    "ng_params = prop.NongravParamaters()\n",
+    "ng_params = prop.NongravParameters()\n",
     "ng_params.a1 = init_sol.get('a1', 0.0)\n",
     "ng_params.a2 = init_sol.get('a2', 0.0)\n",
     "ng_params.a3 = init_sol.get('a3', 0.0)"
