--- a/tests/python/prop/moshup.ipynb
+++ b/tests/python/prop/moshup.ipynb
@@ -49,9 +49,9 @@
     "e = init_sol['e']\n",
     "q = init_sol['q']\n",
     "tp = init_sol['tp']\n",
-    "om = init_sol['om']*np.pi/180.0\n",
-    "w = init_sol['w']*np.pi/180.0\n",
-    "i = init_sol['i']*np.pi/180.0\n",
+    "om = init_sol['om']\n",
+    "w = init_sol['w']\n",
+    "i = init_sol['i']\n",
     "\n",
     "cometary_elements = [e, q, tp, om, w, i]\n",
     "ng_params = prop.NongravParameters()\n",
