updated tests; removed duplicate preprocessor define; updated doxygen mainpage; READY FOR ADES RELEASE!!!

--- a/tests/python/prop/didymos.ipynb
+++ b/tests/python/prop/didymos.ipynb
@@ -57,7 +57,7 @@
    "outputs": [],
    "source": [
     "de_kernel = 441\n",
-    "de_kernel_path = grss.utils.default_kernel_path(de_kernel)\n",
+    "de_kernel_path = grss.utils.default_kernel_path\n",
     "t0 = 59956.5\n",
     "numDays = 3000\n",
     "tf = t0 + numDays\n",
