--- a/tests/python/prop/icarus.ipynb
+++ b/tests/python/prop/icarus.ipynb
@@ -67,7 +67,7 @@
    "outputs": [],
    "source": [
     "de_kernel = 441\n",
-    "de_kernel_path = grss.utils.default_kernel_path(de_kernel)\n",
+    "de_kernel_path = grss.utils.default_kernel_path\n",
     "t0 = init_sol['t']\n",
     "daysInYear = 365.25\n",
     "numYears = 10\n",
