--- a/tests/python/prop/apophis.ipynb
+++ b/tests/python/prop/apophis.ipynb
@@ -57,7 +57,7 @@
    "outputs": [],
    "source": [
     "de_kernel = 441\n",
-    "de_kernel_path = grss.utils.default_kernel_path(de_kernel)\n",
+    "de_kernel_path = grss.utils.default_kernel_path\n",
     "t0 = 62138.035998938605\n",
     "tf = 62502.53724260954\n",
     "prop_sim = prop.PropSimulation(\"(99942) Apophis propagation test\", t0, de_kernel, de_kernel_path)"
