fix reference for joss

--- a/joss/joss_paper.bib
+++ b/joss/joss_paper.bib
@@ -71,13 +71,6 @@ year = {1999},
 url = {https://hdl.handle.net/2014/16816}
 }
 
-@misc{pybind11,
-author = {Wenzel Jakob and Jason Rhinelander and Dean Moldovan},
-year = {2017},
-url = {https://github.com/pybind/pybind11},
-title = {pybind11 -- Seamless operability between C++11 and Python}
-}
-
 @article{Milani1999,
 title = {The Asteroid Identification Problem: II. Target Plane Confidence Boundaries},
 journal = {Icarus},
@@ -86,7 +79,7 @@ number = {2},
 pages = {408-423},
 year = {1999},
 issn = {0019-1035},
-doi = {https://doi.org/10.1006/icar.1999.6135},
+doi = {10.1006/icar.1999.6135},
 author = {Andrea Milani and Giovanni B. Valsecchi},
 }
 
