joss bib update

--- a/joss/joss_paper.bib
+++ b/joss/joss_paper.bib
@@ -96,7 +96,7 @@ author = {Andrea Milani and Giovanni B. Valsecchi},
   publisher = {Springer Science and Business Media LLC},
 }
 
-@article{Park_2021,
+@article{Park2021,
 doi = {10.3847/1538-3881/abd414},
 url = {https://dx.doi.org/10.3847/1538-3881/abd414},
 year = {2021},
