added companion paper citation

--- a/joss/paper.bib
+++ b/joss/paper.bib
@@ -26,6 +26,15 @@ doi       = {10.3847/PSJ/ad1bce},
 publisher = {The American Astronomical Society},
 }
 
+@article{Makadia2024b,
+author    = {Rahil Makadia and Davide Farnocchia and Steven R. Chesley and Siegfried Eggl},
+journal   = {The Planetary Science Journal},
+title     = {{Gauss-Radau Small-body Simulator (GRSS): An Open-Source Library for Planetary Defense}},
+year      = {2024},
+volume    = {Submitted},
+publisher = {The American Astronomical Society},
+}
+
 @article{Rein2014,
 author = {Rein, Hanno and Spiegel, David S.},
 title = "{ias15: a fast, adaptive, high-order integrator for gravitational dynamics, accurate to machine precision over a billion orbits}",
