updated unit tests

--- a/tests/python/prop/didymos.ipynb
+++ b/tests/python/prop/didymos.ipynb
@@ -46,8 +46,7 @@
     "ng_params.k = 0.0\n",
     "ng_params.m = 2.0\n",
     "ng_params.n = 0.0\n",
-    "ng_params.r0_au = 1.0\n",
-    "init_cov = np.zeros((7, 7))"
+    "ng_params.r0_au = 1.0"
    ]
   },
   {
