Initial editorial tweaks for JOSS paper

--- a/joss/paper.bib
+++ b/joss/paper.bib
@@ -8,7 +8,7 @@ volume = {3},
 number = {8},
 pages = {184},
 author = {Rahil Makadia and Sabina D. Raducan and Eugene G. Fahnestock and Siegfried Eggl},
-title = {Heliocentric Effects of the DART Mission on the (65803) Didymos Binary Asteroid System},
+title = {Heliocentric Effects of the DART Mission on the (65803) {Didymos} Binary Asteroid System},
 journal = {The Planetary Science Journal},
 abstract = {The Double Asteroid Redirect Test (DART) is NASA’s first kinetic impact–based asteroid deflection mission. The DART spacecraft will act as a projectile during a hypervelocity impact on Dimorphos, the secondary asteroid in the (65803) Didymos binary system, and alter its mutual orbital period. The initial momentum transfer between the DART spacecraft and Dimorphos is enhanced by the ejecta flung off the surface of Dimorphos. This exchange is characterized within the system by the momentum enhancement parameter, β, and on a heliocentric level by its counterpart, β ⊙. The relationship between β and the physical characteristics of Dimorphos is discussed here. A nominal set of Dimorphos physical parameters from the design reference asteroid and impact circumstances from the design reference mission are used to initialize the ejecta particles for dynamical propagation. The results of this propagation are translated into a gradual momentum transfer onto the Didymos system barycenter. A high-quality solar system propagator is then used to produce precise estimates of the post-DART encounters between Didymos and Earth by generating updated close approach maps. Results show that even for an unexpectedly high β ⊙, a collision between the Didymos system and Earth is practically excluded in the foreseeable future. A small but significant difference is found in modeling the overall momentum transfer when individual ejecta particles escape the Didymos system, as opposed to imparting the ejecta momentum as a single impulse at impact. This difference has implications for future asteroid deflection campaigns, especially when it is necessary to steer asteroids away from gravitational keyholes.}
 }
@@ -16,7 +16,7 @@ abstract = {The Double Asteroid Redirect Test (DART) is NASA’s first kinetic i
 @article{Makadia2024,
 author    = {Rahil Makadia and Steven R. Chesley and Davide Farnocchia and Shantanu P. Naidu and Damya Souami and Paolo Tanga and Kleomenis Tsiganis and Masatoshi Hirabayashi and Siegfried Eggl},
 journal   = {The Planetary Science Journal},
-title     = {{Measurability of the Heliocentric Momentum Enhancement from a Kinetic Impact: The Double Asteroid Redirection Test (DART) Mission}},
+title     = {Measurability of the Heliocentric Momentum Enhancement from a Kinetic Impact: The {Double Asteroid Redirection Test (DART)} Mission},
 year      = {2024},
 month     = feb,
 number    = {2},
@@ -29,7 +29,7 @@ publisher = {The American Astronomical Society},
 @article{Makadia2025,
 author    = {Rahil Makadia and Davide Farnocchia and Steven R. Chesley and Siegfried Eggl},
 journal   = {The Planetary Science Journal},
-title     = {{Gauss-Radau Small-body Simulator (GRSS): An Open-Source Library for Planetary Defense}},
+title     = {{Gauss-Radau Small-body Simulator (GRSS)}: An Open-Source Library for Planetary Defense},
 year      = {2025},
 volume    = {6},
 doi       = {10.3847/PSJ/adbc88},
@@ -51,7 +51,7 @@ doi = {10.1093/mnras/stu2164}
 
 @article{Kizner1961,
 author = {William Kizner},
-title = "{A Method of Describing Miss Distances for Lunar and Interplanetary Trajectories}",
+title = {A Method of Describing Miss Distances for Lunar and Interplanetary Trajectories},
 journal = {Planetary and Space Science},
 year = 1961,
 month = jul,
@@ -75,7 +75,7 @@ pagetotal = {155}
 
 @inproceedings{Chodas1999,
 author = {Paul W. Chodas and Donald K. Yeomans},
-title = {Orbit Determination and Estimation of Impact Probability for Near Earth Objects},
+title = {Orbit Determination and Estimation of Impact Probability for Near {Earth} Objects},
 booktitle = {AAS Guidance and Control Conference, Breckenridge, Colorado, USA},
 year = {1999},
 url = {https://hdl.handle.net/2014/16816}
@@ -96,7 +96,7 @@ author = {Andrea Milani and Giovanni B. Valsecchi},
 @Article{Farnocchia2019,
   author    = {Farnocchia, Davide and Eggl, Siegfried and Chodas, Paul W. and Giorgini, Jon D. and Chesley, Steven R.},
   journal   = {Celestial Mechanics and Dynamical Astronomy},
-  title     = {Planetary encounter analysis on the B-plane: a comprehensive formulation},
+  title     = {Planetary encounter analysis on the {B}-plane: a comprehensive formulation},
   year      = {2019},
   issn      = {1572-9478},
   month     = aug,
@@ -137,7 +137,7 @@ journal = {The Planetary Science Journal},
 @article{Schwamb2023,
 author    = {Schwamb, Megan E. and Jones, R. Lynne and Yoachim, Peter and Volk, Kathryn and Dorsey, Rosemary C. and Opitom, Cyrielle and Greenstreet, Sarah and Lister, Tim and Snodgrass, Colin and Bolin, Bryce T. and Inno, Laura and Bannister, Michele T. and Eggl, Siegfried and Solontoi, Michael and Kelley, Michael S. P. and Jurić, Mario and Lin, Hsing Wen and Ragozzine, Darin and Bernardinelli, Pedro H. and Chesley, Steven R. and Daylan, Tansu and Ďurech, Josef and Fraser, Wesley C. and Granvik, Mikael and Knight, Matthew M. and Lisse, Carey M. and Malhotra, Renu and Oldroyd, William J. and Thirouin, Audrey and Ye, Quanzhi},
 journal   = {The Astrophysical Journal Supplement Series},
-title     = {Tuning the Legacy Survey of Space and Time (LSST) Observing Strategy for Solar System Science},
+title     = "{Tuning the Legacy Survey of Space and Time (LSST) observing strategy for Solar System science}",
 year      = {2023},
 issn      = {1538-4365},
 month     = may,
