test can only be done remotely on CI runner :(

--- a/tests/python/fit/chesley.ipynb
+++ b/tests/python/fit/chesley.ipynb
@@ -17,11 +17,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from grss import fit\n",
+    "print('imported grss.fit')\n",
     "import numpy as np\n",
     "np.set_printoptions(precision=40, linewidth=np.inf)"
    ]
@@ -35,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -86,6 +87,7 @@
     "eliminate = False\n",
     "num_obs_per_night = 4\n",
     "verbose = True\n",
+    "print('getting obs')\n",
     "obs_df = fit.get_optical_obs(body_id, optical_obs_file, t_min_tdb, t_max_tdb, debias_lowres, deweight, eliminate, num_obs_per_night, verbose)\n",
     "obs_df = fit.add_radar_obs(obs_df, t_min_tdb, t_max_tdb, verbose)\n",
     "if add_gaia_obs:\n",
